--- a/freedm.service
+++ b/freedm.service
@@ -3,10 +3,10 @@ Description=free.dm Service daemon
 
 [Service]
 Type=simple
-WorkingDirectory=/home/tommi/Projekte/Privat/free.dm/Repository/free.dm Server/
+WorkingDirectory=~/Projekte/Privat/free.dm/Repository/free.dm Server/
 UMask=0007
-ExecStart="/home/tommi/Projekte/Privat/free.dm/Repository/free.dm Server/server.py" server start
-ExecStop="/home/tommi/Projekte/Privat/free.dm/Repository/free.dm Server/server.py" server stop
+ExecStart="~/Projekte/Privat/free.dm/Repository/free.dm Server/server.py" server start
+ExecStop="~/Projekte/Privat/free.dm/Repository/free.dm Server/server.py" server stop
 StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=freedm
